--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ body {
 .horizontal-divider {
     width: 15px;
     max-width: 200px;
-    height: 200px;;
+    height: 200px;
     background-color: #f0f0f0;
     cursor: col-resize;
     position: absolute;
@@ -181,6 +181,8 @@ body {
     border-radius: 10px; /* Match chess board */
     box-shadow: 0 4px 6px rgba(0, 0, 0, .75); /* Match chess board */
 }
+
+
 
 /* Vertical divider controls */
 .divider-controls.vertical {
