--- a/chess.css
+++ b/chess.css
@@ -325,6 +325,15 @@
     filter: brightness(80%);
 }
 
+.last-move-start, .last-move-end {
+    filter: brightness(50%);
+}
+
+.last-move-start.last-move-fade, .last-move-end.last-move-fade {
+    filter: brightness(100%);
+    transition: filter 3s ease;
+}
+
 .game-controls {
     margin-top: 10px;
 }
